--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <div class="item item-9"></div>
         <div class="item item-10"></div>
         <div class="item item-11"></div>
-        <div class="item item-12 description">MY COLOR PALETTE</div>
+        <div class="item item-12">
+            <h1 class="title">MY COLOR PALETTE</h1>
+        </div>
     </div>
 </body>
 </html>
